리팩토링, 성능최적화

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"]
-        }
+        },
+        "strict": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
     }
 }
