리치 에디터 + 이미지 첨부 적용하기

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/starter-kit": "^3.19.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "firebase": "^12.8.0",
     "lucide-react": "^0.563.0",
     "next-themes": "^0.4.6",
